--- a/Tips_page_style.css
+++ b/Tips_page_style.css
@@ -158,7 +158,7 @@ input[type=checkbox]{
 }
 
 #Tips .column{
-    display: block;
+    display:;
     float: left;
     width: 33%;
     padding: 70px 0;
