--- a/style.css
+++ b/style.css
@@ -2,14 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+   }
+html{
+    scroll-behavior:smooth;
 }
 
-html {
-    scroll-behavior: smooth;
-}
 
-
-/* NAVBAR STYLING STARTS */
+   /* NAVBAR STYLING STARTS */
 .navbar {
     width: 100%;
     display: flex;
@@ -21,21 +20,18 @@ html {
     z-index: 999;
 
 
-}
-
-.nav-links a {
+   }
+   .nav-links a {
     color: black;
     text-decoration: none;
     list-style: none;
-}
-
-/* LOGO */
-.logo {
+   }
+   /* LOGO */
+   .logo {
     font-size: 32px;
-}
-
-/* NAVBAR MENU */
-.menu {
+   }
+   /* NAVBAR MENU */
+   .menu {
     display: flex;
     gap: 1em;
     font-size: 25px;
@@ -43,36 +39,29 @@ html {
     text-decoration: none;
     list-style: none;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-.menu li:hover {
+   }
+   .menu li:hover {
     border-bottom: 2px solid #CC6666;
-}
-
-.menu li {
+   }
+   .menu li {
     padding: 5px 14px;
-}
-
-/* DROPDOWN MENU */
-.services {
-    position: relative;
-}
-
-.dropdown {
+   }
+   /* DROPDOWN MENU */
+   .services {
+    position: relative; 
+   }
+   .dropdown {
     padding: 1em 0;
-    position: absolute;
-    /*WITH RESPECT TO PARENT*/
+    position: absolute; /*WITH RESPECT TO PARENT*/
     display: none;
     border-radius: 8px;
     top: 35px;
     background-color: white;
-}
-
-.dropdown li+li {
+   }
+   .dropdown li + li {
     margin-top: 10px;
-}
-
-.dropdown li {
+   }
+   .dropdown li {
     padding: 0.5em 1em;
     width: 8em;
     text-align: center;
@@ -80,24 +69,21 @@ html {
     font-size: 22px;
     text-decoration: none;
     list-style: none;
-}
-
-.dropdown li:hover {
+   }
+   .dropdown li:hover {
     background-color: #ddd;
     border-bottom: 2px solid #CC6666;
-}
-
-.services:hover .dropdown {
+   }
+   .services:hover .dropdown {
     display: block;
-}
-
-/* icon bar */
+   }
+    /* icon bar */ 
 .navbar .iconbar {
     width: 10%;
     background-color: white;
     overflow: auto;
-}
-
+  }
+  
 .navbar .iconbar a {
     width: 25%;
     text-align: center;
@@ -106,107 +92,92 @@ html {
     color: black;
     font-size: 22px;
     margin: 2%;
-}
+  }
 
 
-/*RESPONSIVE NAVBAR MENU STARTS*/
+   /*RESPONSIVE NAVBAR MENU STARTS*/
 /* CHECKBOX HACK */
-input[type=checkbox] {
+input[type=checkbox]{
     display: none;
-}
-
-/*HAMBURGER MENU*/
-.hamburger {
+   } 
+   /*HAMBURGER MENU*/
+   .hamburger {
     display: none;
     font-size: 24px;
     user-select: none;
-}
-
-/* APPLYING MEDIA QUERIES */
-@media (max-width: 768px) {
-    .menu {
-        display: none;
-        position: absolute;
-        background-color: white;
-        border-bottom: 2px solid #CC6666;
-        right: 0;
-        left: 0;
-        text-align: center;
-        padding: 16px 0;
-    }
-
-    .menu li:hover {
-        display: inline-block;
-    }
-
-    .menu li+li {
-        margin-top: 12px;
-    }
-
-    input[type=checkbox]:checked~.menu {
-        display: block;
-    }
-
-    .hamburger {
-        display: block;
-    }
-
-    .dropdown {
-        left: 50%;
-        top: 30px;
-        transform: translateX(35%);
-    }
-
-    .dropdown li:hover {
-        background-color: #ddd;
-        border-bottom: 2px solid #CC6666;
-    }
-
-    .navbar .iconbar {
+   }
+   /* APPLYING MEDIA QUERIES */
+   @media (max-width: 768px) {
+   .menu { 
+    display:none;
+    position: absolute;
+    background-color:white;
+    border-bottom: 2px solid #CC6666;
+    right: 0;
+    left: 0;
+    text-align: center;
+    padding: 16px 0;
+   }
+   .menu li:hover {
+    display: inline-block;
+   }
+   .menu li + li {
+    margin-top: 12px;
+   }
+   input[type=checkbox]:checked ~ .menu{
+    display: block;
+   }
+   .hamburger {
+    display: block;
+   }
+   .dropdown {
+    left: 50%;
+    top: 30px;
+    transform: translateX(35%);
+   }
+   .dropdown li:hover {
+    background-color:#ddd;
+    border-bottom: 2px solid #CC6666;
+   }
+   .navbar .iconbar{
         font-size: 1px;
         color: #CC6666;
-    }
+   }
 
-}
+   }
 
-/*
-#home .col-{
+
+   #home{
     width: 100%;
     float: left;
-    height: auto;
+    height: 100vh;
     position: relative;
-    background-size:  500px;
+   background-image: url("../images/Swiss\ House\ _\ سويس\ هاوس.jpg"),url("../images/Balsamic\ Steak\ Gorgonzola\ Salad\ with\ Grilled\ Corn.jpg");
+   background-size:  500px;
    background-position:right,left;
    position: relative;
    background-repeat: no-repeat;
    background-color: white;
-}*/
-
-#home .rowwidth {
-    max-width: 100vw;
 }
 
-#home .img-me {
-    max-width: 100%;
-    max-height: min-content;
-}
-
-#home .center {
-    text-align: center;
+#home .center{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     font-size: 30px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     text-align: center;
     margin: auto;
     width: 60%;
-    border: none;
+    border:none;
     padding: 10px;
 }
 
-#home .center h1 {
+#home .center h1{
     color: black;
 }
-
-#home .center h5 {
+#home .center h5{
     color: black;
 }
 
@@ -222,16 +193,17 @@ input[type=checkbox] {
     transition: 0.3s;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     border-radius: 2%;
-}
+  }
 
 /*arrow*/
-#home .arrow {
+  #home .arrow{
+    position: absolute;
+    top: 50%;
     left: 50%;
-    margin-top: 10%;
-    position: relative;
+    transform: translate(-50%,-50%);
+    margin-top: 20%;
 }
-
-#home .arrow span {
+#home .arrow span{
     display: block;
     width: 30px;
     height: 30px;
@@ -241,191 +213,158 @@ input[type=checkbox] {
     margin: -10px;
     animation: animate 2s infinite;
 }
-
-#home .arrow span:nth-child(2) {
+#home .arrow span:nth-child(2){
     animation-delay: -0.2s;
 }
-
-#home .arrow span:nth-child(3) {
+#home .arrow span:nth-child(3){
     animation-delay: -0.4s;
 }
-
 @keyframes animate {
-    0% {
+    0%{
         opacity: 0;
-        transform: rotate(45deg) translate(-20px, -20px);
+        transform: rotate(45deg) translate(-20px,-20px);
     }
-
-    50% {
+    50%{
         opacity: 1;
     }
-
-    100% {
+    100%{
         opacity: 0;
-        transform: rotate(45deg) translate(20px, 20px);
+        transform: rotate(45deg) translate(20px,20px);
     }
 }
+  #home .btn:hover {opacity: 1}
 
-#home .btn:hover {
-    opacity: 1
-}
-
-
-
-
-#Idea {
+  
+  
+  
+#Idea{
     width: 100%;
     float: left;
-    height: auto;
+    height: 100vh;
     position: relative;
     background-color: whitesmoke;
 }
-
-#Idea .Howheader {
-    /*padding-top: 115px;
-    padding-left: 65px;*/
-    margin-top: 32px;
-    margin-bottom: 32px;
+#Idea .Howheader{ 
+    padding-top: 115px;
+    padding-left: 65px;
     font-size: 40px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-#Idea .Howheader p {
+#Idea .Howheader p{
     font-size: 20px;
     color: #CC6666;
 }
-
-#Idea .row {
+#Idea .column{
     float: left;
-    width: 100%;
-    padding: 0px;
+    width: 25%;
+    padding: 35px;
     margin-top: -20px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    height: auto;
 }
 
-#Idea .row img {
+#Idea .column img {
     border-radius: 5%;
     transition: .5s ease;
     backface-visibility: hidden;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
 }
-
-#Idea .row :hover img {
+#Idea .column:hover img {
     opacity: 0.3;
-}
-
-#Idea .row h1 {
-    margin-top: 10px;
-    margin-bottom: 10px;
+  }
+#Idea .column h1 {
     text-align: center;
     font-size: 25px;
 }
-
-#Idea .row p {
-    margin-top: 10px;
-    margin-bottom: 10px;
+#Idea .column p {
     text-align: center;
     font-size: 20px;
 }
 
-#Idea .row ::after {
+#Idea .row ::after{
     content: "";
     clear: both;
     display: table;
 }
 
 
-#About {
+#About{
     width: 100%;
     float: left;
-    height: auto;
+    height: 100vh;
     position: relative;
     background-color: white;
 }
 
-#About .col- {
-    position: absolute;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    text-align: center;
-    margin-top: 7%;
-    margin-right: -5%;
-    margin-bottom: 10px;
-    margin-left: 45%;
-    border: none;
-    padding: 30px;
-    width: 50%;
+#About .aboutheader{
+   position: absolute;
+   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+   text-align: center;
+   margin-top: 7%;
+   margin-right: -5%;
+   margin-bottom: 10px;
+   margin-left: 45%;
+   border: none;
+   padding: 30px;
+   width: 50%;
 }
-
-#About h1 {
-    font-size: 40px;
-    color: #ff0000;
+#About .aboutheader h1{
+   font-size: 40px;
+   color: #CC6666;
 }
-
-#About p {
-    font-size: 25px;
+#About .aboutheader p{
+   font-size: 25px;
 }
 
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 
-/*.newsForm{
+.newsForm{
    margin-top: 10%;
    margin-right: 5%;
    margin-bottom: 10px;
    margin-left: 7%;
-}*/
-body {
-    background: rgb(30, 30, 40);
 }
-
-/*form { max-width:420px; margin:200px auto;margin-left: 50px; }
-*/
+body { background:rgb(30,30,40); }
+form { max-width:420px; margin:200px auto;margin-left: 50px; }
 
 .feedback-input {
-    color: black;
-    font-family: Helvetica, Arial, sans-serif;
-    font-weight: 500;
-    font-size: 18px;
-    border-radius: 5px;
-    line-height: 22px;
-    background-color: transparent;
-    border: 2px solid #CC6666;
-    transition: all 0.3s;
-    padding: 13px;
-    margin-bottom: 15px;
-    width: 100%;
-    box-sizing: border-box;
-    outline: 0;
+ color:black;
+ font-family: Helvetica, Arial, sans-serif;
+ font-weight:500;
+ font-size: 18px;
+ border-radius: 5px;
+ line-height: 22px;
+ background-color: transparent;
+ border:2px solid #CC6666;
+ transition: all 0.3s;
+ padding: 13px;
+ margin-bottom: 15px;
+ width:100%;
+ box-sizing: border-box;
+ outline:0;
 }
 
-.feedback-input:focus {
-    border: 2px solid #CC4949;
-}
+.feedback-input:focus { border:2px solid #CC4949; }
 
 textarea {
-    height: 150px;
-    line-height: 150%;
-    resize: vertical;
+ height: 150px;
+ line-height: 150%;
+ resize:vertical;
 }
 
 [type="submit"] {
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-    width: 100%;
-    background: #CC6666;
-    border-radius: 5px;
-    border: 0;
-    cursor: pointer;
-    color: white;
-    font-size: 24px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    transition: all 0.3s;
-    margin-top: -4px;
-    font-weight: 700;
+ font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+ width: 100%;
+ background:#CC6666;
+ border-radius:5px;
+ border:0;
+ cursor:pointer;
+ color:white;
+ font-size:24px;
+ padding-top:10px;
+ padding-bottom:10px;
+ transition: all 0.3s;
+ margin-top:-4px;
+ font-weight:700;
 }
+[type="submit"]:hover { background:#CC4949; }
 
-[type="submit"]:hover {
-    background: #CC4949;
-}
