--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ html {
     scroll-behavior: smooth;
 }
 
-
 /* NAVBAR STYLING STARTS */
 .navbar {
     width: 100%;
@@ -19,8 +18,6 @@ html {
     background-color: white;
     position: fixed;
     z-index: 999;
-
-
 }
 
 .nav-links a {
@@ -37,6 +34,7 @@ html {
 /* NAVBAR MENU */
 .menu {
     display: flex;
+    float: right;
     gap: 1em;
     font-size: 25px;
     color: black;
@@ -50,7 +48,7 @@ html {
 }
 
 .menu li {
-    padding: 5px 14px;
+    padding: 5px 13px;
 }
 
 /* DROPDOWN MENU */
@@ -123,7 +121,36 @@ input[type=checkbox] {
 }
 
 /* APPLYING MEDIA QUERIES */
-@media (max-width: 768px) {
+@media (max-width: 1500px) {
+    .menu {
+        display: flex;
+        float: right;
+        gap: 1em;
+        font-size: 20px;
+        color: black;
+        text-decoration: none;
+        list-style: none;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+}
+@media (max-width: 1276px) {
+    .menu {
+        display: flex;
+        float: right;
+        gap: 1em;
+        font-size: 17px;
+        color: black;
+        text-decoration: none;
+        list-style: none;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+}
+@media (max-width: 1200px) {
+    .iconbar{
+        display: none;
+    }
+}
+@media (max-width: 1130px) {
     .menu {
         display: none;
         position: absolute;
@@ -133,6 +160,7 @@ input[type=checkbox] {
         left: 0;
         text-align: center;
         padding: 16px 0;
+        margin-top: 60px;
     }
 
     .menu li:hover {
@@ -149,12 +177,14 @@ input[type=checkbox] {
 
     .hamburger {
         display: block;
+        float: right;
     }
 
     .dropdown {
-        left: 50%;
+        left: 30%;
         top: 30px;
         transform: translateX(35%);
+        margin-top: -30px;
     }
 
     .dropdown li:hover {
@@ -165,6 +195,12 @@ input[type=checkbox] {
     .navbar .iconbar {
         font-size: 1px;
         color: #CC6666;
+    }
+    .nav-links a {
+        color: black;
+        font-size: 20px;
+        text-decoration: none;
+        list-style: none;
     }
 
 }
