--- a/style.css
+++ b/style.css
@@ -51,26 +51,25 @@ html {
     padding: 5px 13px;
 }
 
-/* DROPDOWN MENU */
+/* dropdown1 MENU */
 .services {
     position: relative;
 }
 
-.dropdown {
+.dropdown1 {
     padding: 1em 0;
     position: absolute;
-    /*WITH RESPECT TO PARENT*/
     display: none;
     border-radius: 8px;
     top: 35px;
     background-color: white;
 }
 
-.dropdown li+li {
+.dropdown1 li+li {
     margin-top: 10px;
 }
 
-.dropdown li {
+.dropdown1 li {
     padding: 0.5em 1em;
     width: 8em;
     text-align: center;
@@ -80,12 +79,12 @@ html {
     list-style: none;
 }
 
-.dropdown li:hover {
+.dropdown1 li:hover {
     background-color: #ddd;
     border-bottom: 2px solid #CC6666;
 }
 
-.services:hover .dropdown {
+.services:hover .dropdown1 {
     display: block;
 }
 
@@ -180,14 +179,14 @@ input[type=checkbox] {
         float: right;
     }
 
-    .dropdown {
+    .dropdown1 {
         left: 30%;
         top: 30px;
         transform: translateX(35%);
         margin-top: -30px;
     }
 
-    .dropdown li:hover {
+    .dropdown1 li:hover {
         background-color: #ddd;
         border-bottom: 2px solid #CC6666;
     }
@@ -217,6 +216,13 @@ input[type=checkbox] {
    background-repeat: no-repeat;
    background-color: white;
 }*/
+
+/* new nav*/
+.right{
+    float: right;
+    margin-left: auto;
+
+}
 
 #home .rowwidth {
     max-width: 100vw;
