--- a/Recipes_page.css
+++ b/Recipes_page.css
@@ -1,3 +1,6 @@
+#head {
+    margin-bottom: 10px;
+}
 #head .rowwidth {
     max-width: 100vw;
 }
@@ -21,15 +24,15 @@
     }
 }
 #info {
-    width: fit-content;
+    width: 80%;
     margin: auto;
     background-color: whitesmoke;
     border-radius: 10px;
 }
 #info .img-me {
     max-width: 100%;
-    height: 30%;
-    width: 25%;
+    height: 100%;
+    width: 100%;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -38,11 +41,13 @@
 #info .box{
     background-color: white;
     border-radius: 10px;
-    width: 15%;
+    border-color: red;
+    border-style: ridge;
     margin-top: 10px;
     margin-bottom: 10px;
     margin-left: auto;
     margin-right: auto;
+    width: fit-content;
 }
 #info h6,p{
     text-align: center;
