--- a/Recipes_page.css
+++ b/Recipes_page.css
@@ -1,3 +1,6 @@
+h1{
+    text-align: center;
+}
 #head {
     margin-bottom: 10px;
 }
@@ -30,9 +33,8 @@
     border-radius: 10px;
 }
 #info .img-me {
-    max-width: 100%;
-    height: 100%;
-    width: 100%;
+    max-width: fit-content;
+    height: 200px;
     display: block;
     margin-left: auto;
     margin-right: auto;
