--- a/Tips_page_style.css
+++ b/Tips_page_style.css
@@ -148,11 +148,13 @@ input[type=checkbox]{
 
 .rowwidth {
     max-width: 100vw;
+    margin-bottom: 10px;
 }
 
 .img-me {
     max-width: 100%;
     max-height: max-content;
+    padding-top: 5px;
 }
 
    #Tips{
@@ -166,11 +168,10 @@ input[type=checkbox]{
 #Tips .column{
     display: block;
     float: left;
-    width: 33%;
-    padding: 70px 0;
     text-align: center;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    border: 1px solid #CC6666;
+    border:1px solid #CC6666;
+    border-radius: 5px;
     font-size: 20px;
 }
 
