--- a/Tips_page_style.css
+++ b/Tips_page_style.css
@@ -1,150 +1,212 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-   }
-html{
-    scroll-behavior:smooth;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+.div{
+  height: 50px;
+}
+
+/* NAVBAR STYLING STARTS */
+.navbar {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: white;
+  position: fixed;
+  z-index: 999;
+}
+
+.nav-links a {
+  color: black;
+  text-decoration: none;
+  list-style: none;
+}
+
+/* LOGO */
+.logo {
+  font-size: 32px;
+}
+
+/* NAVBAR MENU */
+.menu {
+  display: flex;
+  float: right;
+  gap: 1em;
+  font-size: 25px;
+  color: black;
+  text-decoration: none;
+  list-style: none;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.menu li:hover {
+  border-bottom: 2px solid #CC6666;
+}
+
+.menu li {
+  padding: 5px 13px;
+}
+
+/* dropdown1 MENU */
+.services {
+  position: relative;
+}
+
+.dropdown1 {
+  padding: 1em 0;
+  position: absolute;
+  display: none;
+  border-radius: 8px;
+  top: 35px;
+  background-color: white;
+}
+
+.dropdown1 li+li {
+  margin-top: 10px;
+}
+
+.dropdown1 li {
+  padding: 0.5em 1em;
+  width: 8em;
+  text-align: center;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 22px;
+  text-decoration: none;
+  list-style: none;
+}
+
+.dropdown1 li:hover {
+  background-color: #ddd;
+  border-bottom: 2px solid #CC6666;
+}
+
+.services:hover .dropdown1 {
+  display: block;
+}
+
+/* icon bar */
+.navbar .iconbar {
+  width: 10%;
+  background-color: white;
+  overflow: auto;
+}
+
+.navbar .iconbar a {
+  width: 25%;
+  text-align: center;
+  padding: 2px 5;
+  transition: all 0.3s ease;
+  color: black;
+  font-size: 22px;
+  margin: 2%;
 }
 
 
-   /* NAVBAR STYLING STARTS */
-.navbar {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px;
-    background-color: white;
-    position: fixed;
-    z-index: 999;
-
-
-   }
-   .nav-links a {
-    color: black;
-    text-decoration: none;
-    list-style: none;
-   }
-   /* LOGO */
-   .logo {
-    font-size: 32px;
-   }
-   /* NAVBAR MENU */
-   .menu {
-    display: flex;
-    gap: 1em;
-    font-size: 25px;
-    color: black;
-    text-decoration: none;
-    list-style: none;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-   }
-   .menu li:hover {
-    border-bottom: 2px solid #CC6666;
-   }
-   .menu li {
-    padding: 5px 14px;
-   }
-   /* DROPDOWN MENU */
-   .services {
-    position: relative; 
-   }
-   .dropdown {
-    padding: 1em 0;
-    position: absolute; /*WITH RESPECT TO PARENT*/
-    display: none;
-    border-radius: 8px;
-    top: 35px;
-    background-color: white;
-   }
-   .dropdown li + li {
-    margin-top: 10px;
-   }
-   .dropdown li {
-    padding: 0.5em 1em;
-    width: 8em;
-    text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 22px;
-    text-decoration: none;
-    list-style: none;
-   }
-   .dropdown li:hover {
-    background-color: #ddd;
-    border-bottom: 2px solid #CC6666;
-   }
-   .services:hover .dropdown {
-    display: block;
-   }
-    /* icon bar */ 
-.navbar .iconbar {
-    width: 10%;
-    background-color: white;
-    overflow: auto;
-  }
-  
-.navbar .iconbar a {
-    width: 25%;
-    text-align: center;
-    padding: 2px 5;
-    transition: all 0.3s ease;
-    color: black;
-    font-size: 22px;
-    margin: 2%;
-  }
-
-
-   /*RESPONSIVE NAVBAR MENU STARTS*/
+/*RESPONSIVE NAVBAR MENU STARTS*/
 /* CHECKBOX HACK */
-input[type=checkbox]{
-    display: none;
-   } 
-   /*HAMBURGER MENU*/
-   .hamburger {
-    display: none;
-    font-size: 24px;
-    user-select: none;
-   }
-   /* APPLYING MEDIA QUERIES */
-   @media (max-width: 768px) {
-   .menu { 
-    display:none;
-    position: absolute;
-    background-color:white;
-    border-bottom: 2px solid #CC6666;
-    right: 0;
-    left: 0;
-    text-align: center;
-    padding: 16px 0;
-   }
-   .menu li:hover {
-    display: inline-block;
-   }
-   .menu li + li {
-    margin-top: 12px;
-   }
-   input[type=checkbox]:checked ~ .menu{
-    display: block;
-   }
-   .hamburger {
-    display: block;
-   }
-   .dropdown {
-    left: 50%;
-    top: 30px;
-    transform: translateX(35%);
-   }
-   .dropdown li:hover {
-    background-color:#ddd;
-    border-bottom: 2px solid #CC6666;
-   }
-   .navbar .iconbar{
-        font-size: 1px;
-        color: #CC6666;
-   }
+input[type=checkbox] {
+  display: none;
+}
 
-   }
+/*HAMBURGER MENU*/
+.hamburger {
+  display: none;
+  font-size: 24px;
+  user-select: none;
+}
+
+/* APPLYING MEDIA QUERIES */
+@media (max-width: 1500px) {
+  .menu {
+      display: flex;
+      float: right;
+      gap: 1em;
+      font-size: 20px;
+      color: black;
+      text-decoration: none;
+      list-style: none;
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
+}
+@media (max-width: 1276px) {
+  .menu {
+      display: flex;
+      float: right;
+      gap: 1em;
+      font-size: 17px;
+      color: black;
+      text-decoration: none;
+      list-style: none;
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
+}
+@media (max-width: 1200px) {
+  .iconbar{
+      display: none;
+  }
+}
+@media (max-width: 1130px) {
+  .menu {
+      display: none;
+      position: absolute;
+      background-color: white;
+      border-bottom: 2px solid #CC6666;
+      right: 0;
+      left: 0;
+      text-align: center;
+      padding: 16px 0;
+      margin-top: 60px;
+  }
+
+  .menu li:hover {
+      display: inline-block;
+  }
+
+  .menu li+li {
+      margin-top: 12px;
+  }
+
+  input[type=checkbox]:checked~.menu {
+      display: block;
+  }
+
+  .hamburger {
+      display: block;
+      float: right;
+  }
+
+  .dropdown1 {
+      left: 30%;
+      top: 30px;
+      transform: translateX(35%);
+      margin-top: -30px;
+  }
+
+  .dropdown1 li:hover {
+      background-color: #ddd;
+      border-bottom: 2px solid #CC6666;
+  }
+
+  .navbar .iconbar {
+      font-size: 1px;
+      color: #CC6666;
+  }
+  .nav-links a {
+      color: black;
+      font-size: 20px;
+      text-decoration: none;
+      list-style: none;
+  }
+
+}
 
 .rowwidth {
     max-width: 100vw;
@@ -163,6 +225,10 @@ input[type=checkbox]{
     height: fit-content;
     position: relative;
    background-color: white;
+}
+
+label{
+  padding-left: 5px;
 }
 
 #Tips .column{
