--- a/Tips_page_style.css
+++ b/Tips_page_style.css
@@ -248,7 +248,7 @@ label{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-style:italic;
     direction: rtl;
-
+    margin: auto;
 
 }
 
