--- a/Recipes_page.css
+++ b/Recipes_page.css
@@ -17,7 +17,7 @@ h1{
 
 }
 #head h1, p{
-    margin-top: 50%;
+    margin-top: 25%;
     text-align: center;
 }
 @media (max-width: 992px) {
@@ -29,7 +29,6 @@ h1{
 #info {
     width: 80%;
     margin: auto;
-    background-color: whitesmoke;
     border-radius: 10px;
 }
 #info .img-me {
@@ -43,7 +42,7 @@ h1{
 #info .box{
     background-color: white;
     border-radius: 10px;
-    border-color: red;
+    border-color: gray;
     border-style: ridge;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -56,4 +55,9 @@ h1{
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+}
+
+.accordion_margin{
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
