--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -8,9 +8,13 @@ html {
     scroll-behavior: smooth;
 }
 
+.bottom{
+    margin-bottom: 82px;
+}
+
 .div{
     height: 200px;
-    background-color: white;
+    background-color: whitesmoke;
 }
 
 /* NAVBAR STYLING STARTS */
