--- a/CSS/style.css
+++ b/CSS/style.css
@@ -40,13 +40,13 @@
     padding: 10px;
 }
 
-#home .center h1 {
+/* #home .center h1 {
     color: black;
 }
 
 #home .center h5 {
     color: black;
-}
+} */
 
 #home .btn {
     background-color: #CC6666;
