--- a/includes/Italian_page.html
+++ b/includes/Italian_page.html
@@ -28,18 +28,18 @@
                     <input type="checkbox" id="checkbox_toggle" />
                     <label for="checkbox_toggle" class="hamburger">&#9776;</label>
                     <div class="menu">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="index.html#Idea">Idea</a></li>
-                        <li><a href="index.html#About">About Us</a></li>
+                        <li><a href="/index.html">Home</a></li>
+                        <li><a href="/index.html#Idea">Idea</a></li>
+                        <li><a href="/index.html#About">About Us</a></li>
                         <li class="services">
                             <a>Recipes</a>
                             <ul class="dropdown1">
-                                <li><a href="/HTML/Mexican_page.html">Mexican</a></li>
-                                <li><a href="/HTML/Italian_page.html">Italian</a></li>
-                                <li><a href="/HTML/Israeli_page.html">Israeli</a></li>
+                                <li><a href="/includes/Mexican_page.html">Mexican</a></li>
+                                <li><a href="/includes/Italian_page.html">Italian</a></li>
+                                <li><a href="/includes/Israeli_page.html">Israeli</a></li>
                             </ul>
                         </li>
-                        <li><a href="/HTML/Tips_page.html">Tips</a></li>
+                        <li><a href="/includes/Tips_page.html">Tips</a></li>
                     </div>
                 </ul>
             </nav>
@@ -56,7 +56,7 @@
                     <p>Gazpacho is a cold soup made of raw fresh veggies, stale bread, vinegar, garlic, and olive oil. </p>
                 </div>
                 <div class="col-lg-6 col-md-12">
-                    <img class="img-me" src="images\recipes\Gazpacho.jpeg" alt="main picture" height="700">   
+                    <img class="img-me" src="/images\recipes\Gazpacho.jpeg" alt="main picture" height="700">   
                 </div>
             </div>
         </div>
@@ -66,17 +66,17 @@
         <div class="container-fluid">
             <div class="row ">
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Ingridients.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Ingridients.jpeg" alt="main picture">   
                     <h6>Ingredients</h6> 
                     <p>14</p>
                 </div>
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Time.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Time.jpeg" alt="main picture">   
                     <h6>Total time</h6>
                     <p>1 hour</p>
                 </div>
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Difficulty.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Difficulty.jpeg" alt="main picture">   
                     <h6>Difficulty</h6> 
                     <p>Difficult</p>
                 </div>
@@ -86,10 +86,10 @@
 
     </section>
 
-    <div class="accordion" id="Description">
+    <div class="accordion accordion_margin" id="Description">
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
-            <button class="accordion-button" type="button" 
+            <button class="accordion-button collapsed" type="button" 
             data-bs-toggle="collapse" data-bs-target="#collapseOne" 
             aria-expanded="false" aria-controls="collapseOne">
                 Ingredients
@@ -120,7 +120,7 @@
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingTwo">
-              <button class="accordion-button" type="button" 
+              <button class="accordion-button collapsed" type="button" 
               data-bs-toggle="collapse" data-bs-target="#collapseTwo" 
               aria-expanded="false" aria-controls="collapseTwo">
               preparation method
@@ -145,7 +145,7 @@
         <div class="container-fluid">
             <div class="row rowwidth">
                 <div class="col-lg-6 col-md-12">
-                    <img class="img-me" src="images\recipes\Squid Ink Ravioli (stuffed with egg-yolk).jpeg" alt="main picture" height="700">   
+                    <img class="img-me" src="/images\recipes\Squid Ink Ravioli (stuffed with egg-yolk).jpeg" alt="main picture" height="700">   
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <h1>Squid Ink Ravioli (stuffed with egg-yolk)</h1>
@@ -159,17 +159,17 @@
         <div class="container-fluid">
             <div class="row ">
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Ingridients.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Ingridients.jpeg" alt="main picture">   
                     <h6>Ingredients</h6> 
                     <p>10</p>
                 </div>
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Time.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Time.jpeg" alt="main picture">   
                     <h6>Total time</h6>
                     <p>1 hour</p>
                 </div>
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Difficulty.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Difficulty.jpeg" alt="main picture">   
                     <h6>Difficulty</h6> 
                     <p>Difficult</p>
                 </div>
@@ -179,10 +179,10 @@
 
     </section>
 
-    <div class="accordion" id="Description">
+    <div class="accordion accordion_margin" id="Description">
         <div class="accordion-item">
           <h2 class="accordion-header" id="heading3">
-            <button class="accordion-button" type="button" 
+            <button class="accordion-button collapsed" type="button" 
             data-bs-toggle="collapse" data-bs-target="#collapse3" 
             aria-expanded="false" aria-controls="collapse3">
                 Ingredients
@@ -212,7 +212,7 @@
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header" id="heading4">
-              <button class="accordion-button" type="button" 
+              <button class="accordion-button collapsed" type="button" 
               data-bs-toggle="collapse" data-bs-target="#collapse4" 
               aria-expanded="false" aria-controls="collapse4">
               preparation method
@@ -251,7 +251,7 @@
                     <p>a classic tiramisù can be transcendent. A creamy dessert of espresso-soaked ladyfingers surrounded by lightly sweetened whipped cream and a rich mascarpone, tiramisù relies heavily on the quality of its ingredients.</p>
                 </div>
                 <div class="col-lg-6 col-md-12">
-                    <img class="img-me" src="images\recipes\Tiramisù.jpeg" alt="main picture" height="700">   
+                    <img class="img-me" src="/images\recipes\Tiramisù.jpeg" alt="main picture" height="700">   
                 </div>
             </div>
         </div>
@@ -261,17 +261,17 @@
         <div class="container-fluid">
             <div class="row ">
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Ingridients.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Ingridients.jpeg" alt="main picture">   
                     <h6>Ingredients</h6> 
                     <p>9</p>
                 </div>
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Time.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Time.jpeg" alt="main picture">   
                     <h6>Total time</h6>
                     <p>1 hour</p>
                 </div>
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Difficulty.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Difficulty.jpeg" alt="main picture">   
                     <h6>Difficulty</h6> 
                     <p>Medium</p>
                 </div>
@@ -281,10 +281,10 @@
 
     </section>
 
-    <div class="accordion" id="Description">
+    <div class="accordion accordion_margin" id="Description">
         <div class="accordion-item">
           <h2 class="accordion-header" id="heading5">
-            <button class="accordion-button" type="button" 
+            <button class="accordion-button collapsed" type="button" 
             data-bs-toggle="collapse" data-bs-target="#collapse5" 
             aria-expanded="false" aria-controls="collapse5">
                 Ingredients
@@ -311,7 +311,7 @@
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header" id="heading6">
-              <button class="accordion-button" type="button" 
+              <button class="accordion-button collapsed" type="button" 
               data-bs-toggle="collapse" data-bs-target="#collapse6" 
               aria-expanded="false" aria-controls="collapse6">
               preparation method
@@ -337,7 +337,7 @@
         <div class="container-fluid">
             <div class="row rowwidth">
                 <div class="col-lg-6 col-md-12">
-                    <img class="img-me" src="images\recipes\Negroni sbagliato.jpeg" alt="main picture" height="700">   
+                    <img class="img-me" src="/images\recipes\Negroni sbagliato.jpeg" alt="main picture" height="700">   
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <h1>Negroni sbagliato</h1>
@@ -351,17 +351,17 @@
         <div class="container-fluid">
             <div class="row ">
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Ingridients.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Ingridients.jpeg" alt="main picture">   
                     <h6>Ingredients</h6> 
                     <p>5</p>
                 </div>
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Time.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Time.jpeg" alt="main picture">   
                     <h6>Total time</h6>
                     <p>5 min</p>
                 </div>
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Difficulty.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Difficulty.jpeg" alt="main picture">   
                     <h6>Difficulty</h6> 
                     <p>Easy</p>
                 </div>
@@ -371,10 +371,10 @@
 
     </section>
 
-    <div class="accordion" id="Description">
+    <div class="accordion accordion_margin" id="Description">
         <div class="accordion-item">
           <h2 class="accordion-header" id="heading7">
-            <button class="accordion-button" type="button" 
+            <button class="accordion-button collapsed" type="button" 
             data-bs-toggle="collapse" data-bs-target="#collapse7" 
             aria-expanded="false" aria-controls="collapse7">
                 Ingredients
@@ -395,7 +395,7 @@
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header" id="heading8">
-              <button class="accordion-button" type="button" 
+              <button class="accordion-button collapsed" type="button" 
               data-bs-toggle="collapse" data-bs-target="#collapse8" 
               aria-expanded="false" aria-controls="collapse8">
               preparation method
