--- a/includes/Mexican_page.html
+++ b/includes/Mexican_page.html
@@ -28,18 +28,18 @@
                     <input type="checkbox" id="checkbox_toggle" />
                     <label for="checkbox_toggle" class="hamburger">&#9776;</label>
                     <div class="menu">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="index.html#Idea">Idea</a></li>
-                        <li><a href="index.html#About">About Us</a></li>
+                        <li><a href="/index.html">Home</a></li>
+                        <li><a href="/index.html#Idea">Idea</a></li>
+                        <li><a href="/index.html#About">About Us</a></li>
                         <li class="services">
                             <a>Recipes</a>
                             <ul class="dropdown1">
-                                <li><a href="/HTML/Mexican_page.html">Mexican</a></li>
-                                <li><a href="/HTML/Italian_page.html">Italian</a></li>
-                                <li><a href="/HTML/Israeli_page.html">Israeli</a></li>
+                                <li><a href="/includes/Mexican_page.html">Mexican</a></li>
+                                <li><a href="/includes/Italian_page.html">Italian</a></li>
+                                <li><a href="/includes/Israeli_page.html">Israeli</a></li>
                             </ul>
                         </li>
-                        <li><a href="/HTML/Tips_page.html">Tips</a></li>
+                        <li><a href="/includes/Tips_page.html">Tips</a></li>
                     </div>
                 </ul>
             </nav>
@@ -56,7 +56,7 @@
                     <p> the most addictive dip I’ve tasted recently- is Salsa Verde. This delicious Mexican green (Verde) salsa is made with roasted tomatillos, chili peppers, lime juice, cilantro, garlic, and onion. You can dip it with chips, spread it on meat, or add it to your tacos! This salsa is crazy delicious. Huge YASSS here. </p>
                 </div>
                 <div class="col-lg-6 col-md-12">
-                    <img class="img-me" src="images\recipes\Salsa Verde.jpeg" alt="main picture" height="700">   
+                    <img class="img-me" src="/images\recipes\Salsa Verde.jpeg" alt="main picture" height="700">   
                 </div>
             </div>
         </div>
@@ -66,17 +66,17 @@
         <div class="container-fluid">
             <div class="row ">
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Ingridients.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Ingridients.jpeg" alt="main picture">   
                     <h6>Ingredients</h6> 
                     <p>8</p>
                 </div>
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Time.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Time.jpeg" alt="main picture">   
                     <h6>Total time</h6>
                     <p>20 min</p>
                 </div>
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Difficulty.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Difficulty.jpeg" alt="main picture">   
                     <h6>Difficulty</h6> 
                     <p>Easy</p>
                 </div>
@@ -89,7 +89,7 @@
     <div class="accordion" id="Description">
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
-            <button class="accordion-button" type="button" 
+            <button class="accordion-button collapsed" type="button" 
             data-bs-toggle="collapse" data-bs-target="#collapseOne" 
             aria-expanded="false" aria-controls="collapseOne">
                 Ingredients
@@ -112,13 +112,13 @@
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingTwo">
-              <button class="accordion-button" type="button" 
+              <button class="accordion-button collapsed" type="button" 
               data-bs-toggle="collapse" data-bs-target="#collapseTwo" 
               aria-expanded="false" aria-controls="collapseTwo">
               preparation method
               </button>
             </h2>
-            <div id="collapseTwo" class=" collapse" 
+            <div id="collapseTwo" class="collapse" 
             aria-labelledby="headingTwo" data-bs-parent="#Description">
               <div class="accordion-body">
                 - Remove the husks from the tomatillos and wash well. <br>
@@ -143,7 +143,7 @@
         <div class="container-fluid">
             <div class="row rowwidth">
                 <div class="col-lg-6 col-md-12">
-                    <img class="img-me" src="images\recipes\Chili con carne.jpeg" alt="main picture" height="700">   
+                    <img class="img-me" src="/images\recipes\Chili con carne.jpeg" alt="main picture" height="700">   
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <h1>Chili con carne</h1>
@@ -157,17 +157,17 @@
         <div class="container-fluid">
             <div class="row ">
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Ingridients.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Ingridients.jpeg" alt="main picture">   
                     <h6>Ingredients</h6> 
                     <p>17</p>
                 </div>
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Time.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Time.jpeg" alt="main picture">   
                     <h6>Total time</h6>
                     <p>2 hours</p>
                 </div>
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Difficulty.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Difficulty.jpeg" alt="main picture">   
                     <h6>Difficulty</h6> 
                     <p>Difficult</p>
                 </div>
@@ -180,7 +180,7 @@
     <div class="accordion" id="Description">
         <div class="accordion-item">
           <h2 class="accordion-header" id="heading3">
-            <button class="accordion-button" type="button" 
+            <button class="accordion-button collapsed" type="button" 
             data-bs-toggle="collapse" data-bs-target="#collapse3" 
             aria-expanded="false" aria-controls="collapse3">
                 Ingredients
@@ -212,7 +212,7 @@
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header" id="heading4">
-              <button class="accordion-button" type="button" 
+              <button class="accordion-button collapsed" type="button" 
               data-bs-toggle="collapse" data-bs-target="#collapse4" 
               aria-expanded="false" aria-controls="collapse4">
               preparation method
@@ -239,7 +239,7 @@
                     <p>A churro is a type of fried dough from Spanish and Portuguese cuisine.  churros can either be thin (and sometimes knotted) or long and thick, and served with chocolate or maple</p>
                 </div>
                 <div class="col-lg-6 col-md-12">
-                    <img class="img-me" src="images\recipes\Choroos.jpeg" alt="main picture" height="700">   
+                    <img class="img-me" src="/images\recipes\Choroos.jpeg" alt="main picture" height="700">   
                 </div>
             </div>
         </div>
@@ -249,17 +249,17 @@
         <div class="container-fluid">
             <div class="row ">
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Ingridients.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Ingridients.jpeg" alt="main picture">   
                     <h6>Ingredients</h6> 
                     <p>13</p>
                 </div>
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Time.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Time.jpeg" alt="main picture">   
                     <h6>Total time</h6>
                     <p>40 min</p>
                 </div>
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Difficulty.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Difficulty.jpeg" alt="main picture">   
                     <h6>Difficulty</h6> 
                     <p>Easy</p>
                 </div>
@@ -272,7 +272,7 @@
     <div class="accordion" id="Description">
         <div class="accordion-item">
           <h2 class="accordion-header" id="heading5">
-            <button class="accordion-button" type="button" 
+            <button class="accordion-button collapsed" type="button" 
             data-bs-toggle="collapse" data-bs-target="#collapse5" 
             aria-expanded="false" aria-controls="collapse5">
                 Ingredients
@@ -302,7 +302,7 @@
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header" id="heading6">
-              <button class="accordion-button" type="button" 
+              <button class="accordion-button collapsed" type="button" 
               data-bs-toggle="collapse" data-bs-target="#collapse6" 
               aria-expanded="false" aria-controls="collapse6">
               preparation method
@@ -326,7 +326,7 @@
         <div class="container-fluid">
             <div class="row rowwidth">
                 <div class="col-lg-6 col-md-12">
-                    <img class="img-me" src="images\recipes\Paloma cocktail.jpeg" alt="main picture" height="700">   
+                    <img class="img-me" src="/images\recipes\Paloma cocktail.jpeg" alt="main picture" height="700">   
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <h1>Paloma cocktail</h1>
@@ -340,17 +340,17 @@
         <div class="container-fluid">
             <div class="row ">
                 <div class="col-xl-4 col-lg-12 col-md-4 col-sm-4 box">
-                    <img class="img-me" src="images\Ingridients.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Ingridients.jpeg" alt="main picture">   
                     <h6>Ingredients</h6> 
                     <p>5</p>
                 </div>
                 <div class="col-xl-4 col-lg-12 col-md-4 col-sm-4 box">
-                    <img class="img-me" src="images\Time.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Time.jpeg" alt="main picture">   
                     <h6>Total time</h6>
                     <p>10 min</p>
                 </div>
                 <div class="col-xl-4 col-lg-12 col-md-4 col-sm-4 box">
-                    <img class="img-me" src="images\Difficulty.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Difficulty.jpeg" alt="main picture">   
                     <h6>Difficulty</h6> 
                     <p>Easy</p>
                 </div>
@@ -363,7 +363,7 @@
     <div class="accordion" id="Description">
         <div class="accordion-item">
           <h2 class="accordion-header" id="heading7">
-            <button class="accordion-button" type="button" 
+            <button class="accordion-button collapsed" type="button" 
             data-bs-toggle="collapse" data-bs-target="#collapse7" 
             aria-expanded="false" aria-controls="collapse7">
                 Ingredients
@@ -383,7 +383,7 @@
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header" id="heading8">
-              <button class="accordion-button" type="button" 
+              <button class="accordion-button collapsed" type="button" 
               data-bs-toggle="collapse" data-bs-target="#collapse8" 
               aria-expanded="false" aria-controls="collapse8">
               preparation method
